istio/https-istio-ingress-gateway/actix-web-injected/actix-web-injected-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "actix-web-injected"
  namespace: "dev"
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: "actix-web-injected"
